Fixed command shift on raster

--- a/css/terminal.css
+++ b/css/terminal.css
@@ -8,6 +8,7 @@ body {
 .cmdline {
     outline: none;
     background-color: transparent;
+    padding:0;
     margin:0;
     font: inherit;
     border: none;
